[package]
name = "raspi-rs-btwatch2-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
bluer = { version = "0.17.3", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
metrics = "0.24.0"
metrics-exporter-prometheus = "0.16.0"
tokio = { version = "1.41.0", features = ["full"] }
tokio-stream = "0.1.16"
